--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,56 +34,67 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: 7.0.x
+          dotnet-version: 8.0.x
 
       - name: Restore dependencies
         run: dotnet restore ./RTPackConverter/RTPackConverter.csproj
 
 
       
-# ---- Publish and archive - net7.0 Windows x86
+# ---- Publish and archive - net8.0 Windows x86
 
-      - name: Publish net7.0 win-x86
-        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net7.0_win-x86/RTPackConverter/ --configuration Release --framework net7.0 --self-contained true --runtime win-x86 -p:Platform=x86 -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
-      - name: Archive published net7.0 win-x86
+      - name: Publish net8.0 win-x86
+        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_win-x86/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime win-x86 -p:Platform=x86 -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
+      - name: Archive published net8.0 win-x86
         uses: ihiroky/archive-action@v1
         with:
-          root_dir: "./publish/net7.0_win-x86/"
-          file_path: "./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net7.0_win-x86.zip"
+          root_dir: "./publish/net8.0_win-x86/"
+          file_path: "./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_win-x86.zip"
 
 
 
-# ---- Publish and archive - net7.0 Windows x64
+# ---- Publish and archive - net8.0 Windows x64
 
-      - name: Publish net7.0 win-x64
-        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net7.0_win-x64/RTPackConverter/ --configuration Release --framework net7.0 --self-contained true --runtime win-x64 -p:Platform=x64 -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
-      - name: Archive published net7.0 win-x64
+      - name: Publish net8.0 win-x64
+        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_win-x64/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime win-x64 -p:Platform=x64 -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
+      - name: Archive published net8.0 win-x64
         uses: ihiroky/archive-action@v1
         with:
-          root_dir: "./publish/net7.0_win-x64/"
-          file_path: "./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net7.0_win-x64.zip"
+          root_dir: "./publish/net8.0_win-x64/"
+          file_path: "./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_win-x64.zip"
 
 
-# ---- Publish and archive - net7.0 Linux x64
+# ---- Publish and archive - net8.0 Linux x64
 
-      - name: Publish net7.0 linux-x64
-        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net7.0_linux-x64/RTPackConverter/ --configuration Release --framework net7.0 --self-contained true --runtime linux-x64 -p:PublishSingleFile=true
-      - name: Archive published net7.0 linux-x64
+      - name: Publish net8.0 linux-x64
+        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_linux-x64/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime linux-x64 -p:PublishSingleFile=true
+      - name: Archive published net8.0 linux-x64
         uses: ihiroky/archive-action@v1
         with:
-          root_dir: "./publish/net7.0_linux-x64/"
-          file_path: "./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net7.0_linux-x64.tar.gz"
+          root_dir: "./publish/net8.0_linux-x64/"
+          file_path: "./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_linux-x64.tar.gz"
           
           
-# ---- Publish and archive - net7.0 OSX x64
+# ---- Publish and archive - net8.0 OSX x64
 
-      - name: Publish net7.0 osx-x64
-        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net7.0_osx-x64/RTPackConverter/ --configuration Release --framework net7.0 --self-contained true --runtime osx-x64 -p:PublishSingleFile=true
-      - name: Archive published net7.0 osx-x64
+      - name: Publish net8.0 osx-x64
+        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_osx-x64/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime osx-x64 -p:PublishSingleFile=true
+      - name: Archive published net8.0 osx-x64
         uses: ihiroky/archive-action@v1
         with:
-          root_dir: "./publish/net7.0_osx-x64/"
-          file_path: "./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net7.0_osx-x64.tar.gz"
+          root_dir: "./publish/net8.0_osx-x64/"
+          file_path: "./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_osx-x64.tar.gz"
+          
+          
+# ---- Publish and archive - net8.0 OSX arm64
+
+      - name: Publish net8.0 osx-arm64
+        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_osx-arm64/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime osx-arm64 -p:PublishSingleFile=true
+      - name: Archive published net8.0 osx-arm64
+        uses: ihiroky/archive-action@v1
+        with:
+          root_dir: "./publish/net8.0_osx-arm64/"
+          file_path: "./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_osx-arm64.tar.gz"
 
 
 # ---- Creating github Release
@@ -96,7 +107,8 @@ jobs:
           token: ${{github.token}}
           repository: ${{github.repository}}
           files: |
-            ./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net7.0_win-x86.zip
-            ./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net7.0_win-x64.zip
-            ./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net7.0_linux-x64.tar.gz
-            ./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net7.0_osx-x64.tar.gz
+            ./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_win-x86.zip
+            ./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_win-x64.zip
+            ./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_linux-x64.tar.gz
+            ./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_osx-x64.tar.gz
+            ./publish/RTPackConverter_V${{steps.get-version.outputs.version}}_net8.0_osx-arm64.tar.gz
