Updated publish workflow yet again - seems I had to run dotnet clean before each dotnet publish

--- a/RTPackConverter/Directory.Build.props
+++ b/RTPackConverter/Directory.Build.props
@@ -1,5 +1,5 @@
 <Project>
     <PropertyGroup>
-        <MSBUildProjectExtensionsPath>..\output.MsBuildProps\RTPackConverter\</MSBUildProjectExtensionsPath>
+        <MSBUildProjectExtensionsPath>..\output.MsBuildProps\$(Configuration)_$(Platform)\RTPackConverter\</MSBUildProjectExtensionsPath>
     </PropertyGroup>
 </Project>
