--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,14 +37,15 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Restore dependencies
-        run: dotnet restore ./RTPackConverter/RTPackConverter.csproj
+        run: dotnet restore ./RTPackConverter.sln
 
 
       
 # ---- Publish and archive - net8.0 Windows x86
-
+      - name: Clean before publish
+        run: dotnet clean ./RTPackConverter.sln --configuration Release -p:Platform="Any CPU" --framework net8.0
       - name: Publish net8.0 win-x86
-        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_win-x86/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime win-x86 -p:Platform=x86 -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
+        run: dotnet publish ./RTPackConverter.sln --output ./publish/net8.0_win-x86/RTPackConverter/ --configuration Release -p:Platform="Any CPU" --framework net8.0 --runtime win-x86 --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
       - name: Archive published net8.0 win-x86
         uses: ihiroky/archive-action@v1
         with:
@@ -54,9 +55,10 @@ jobs:
 
 
 # ---- Publish and archive - net8.0 Windows x64
-
+      - name: Clean before publish
+        run: dotnet clean ./RTPackConverter.sln --configuration Release -p:Platform="Any CPU" --framework net8.0
       - name: Publish net8.0 win-x64
-        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_win-x64/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime win-x64 -p:Platform=x64 -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
+        run: publish ./RTPackConverter.sln --output ./publish/net8.0_win-x64/RTPackConverter/ --configuration Release -p:Platform="Any CPU" --framework net8.0 --runtime win-x64 --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true
       - name: Archive published net8.0 win-x64
         uses: ihiroky/archive-action@v1
         with:
@@ -65,9 +67,10 @@ jobs:
 
 
 # ---- Publish and archive - net8.0 Linux x64
-
+      - name: Clean before publish
+        run: dotnet clean ./RTPackConverter.sln --configuration Release -p:Platform="Any CPU" --framework net8.0
       - name: Publish net8.0 linux-x64
-        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_linux-x64/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime linux-x64 -p:PublishSingleFile=true -p:Platform="Any CPU"
+        run: dotnet publish ./RTPackConverter.sln --output ./publish/net8.0_linux-x64/RTPackConverter/ --configuration Release -p:Platform="Any CPU" --framework net8.0 --runtime linux-x64 --self-contained true -p:PublishSingleFile=true
       - name: Archive published net8.0 linux-x64
         uses: ihiroky/archive-action@v1
         with:
@@ -76,9 +79,10 @@ jobs:
           
           
 # ---- Publish and archive - net8.0 OSX x64
-
+      - name: Clean before publish
+        run: dotnet clean ./RTPackConverter.sln --configuration Release -p:Platform="Any CPU" --framework net8.0
       - name: Publish net8.0 osx-x64
-        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_osx-x64/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime osx-x64 -p:PublishSingleFile=true -p:Platform="Any CPU"
+        run: publish ./RTPackConverter.sln --output ./publish/net8.0_osx-x64/RTPackConverter/ --configuration Release -p:Platform="Any CPU" --framework net8.0 --runtime osx-x64 --self-contained true -p:PublishSingleFile=true
       - name: Archive published net8.0 osx-x64
         uses: ihiroky/archive-action@v1
         with:
@@ -87,9 +91,10 @@ jobs:
           
           
 # ---- Publish and archive - net8.0 OSX arm64
-
+      - name: Clean before publish
+        run: dotnet clean ./RTPackConverter.sln --configuration Release -p:Platform="Any CPU" --framework net8.0
       - name: Publish net8.0 osx-arm64
-        run: dotnet publish ./RTPackConverter/RTPackConverter.csproj --output ./publish/net8.0_osx-arm64/RTPackConverter/ --configuration Release --framework net8.0 --self-contained true --runtime osx-arm64 -p:PublishSingleFile=true -p:Platform="Any CPU"
+        run: dotnet publish ./RTPackConverter.sln --output ./publish/net8.0_osx-arm64/RTPackConverter/ --configuration Release -p:Platform="Any CPU" --framework net8.0 --runtime osx-arm64 --self-contained true -p:PublishSingleFile=true
       - name: Archive published net8.0 osx-arm64
         uses: ihiroky/archive-action@v1
         with:
